Redesign FileOperations